# Fesium

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  fesium.py  nanoserver.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-tests.yml
docs/: README.md
docs/assets/brand/: fesium-social-preview-prompt.md
docs/decisions/: 0001-preserve-nanoserver-compat.md  README.md
docs/dev/: conventions.md  setup.md  testing.md
docs/plans/: 2026-04-17-fesium-phase-1-implementation.md  2026-04-18-fesium-brand-rollout-implementation.md  2026-04-19-fesium-database-flow-implementation.md  2026-04-19-fesium-server-flow-implementation.md  2026-04-19-fesium-shell-density-implementation.md  README.md
docs/release/: README.md  v2.0.0.md
docs/specs/: 2026-04-17-fesium-redesign-design.md  2026-04-19-fesium-database-flow-design.md  2026-04-19-fesium-server-flow-design.md  README.md
docs/superpowers/specs/: 2026-04-17-fesium-redesign-design.md  2026-04-18-fesium-brand-rollout-design.md  2026-04-19-fesium-shell-density-design.md
scripts/: capture_overview_mock.py
src/fesium/: app.py
src/fesium/app/: __init__.py  bootstrap.py  controller.py
src/fesium/assets/: __init__.py
src/fesium/core/: __init__.py  browser.py  config.py  database.py  environment.py  paths.py  project_detection.py  runtime_detection.py  (+3 more)
tests/unit/: test_app_bootstrap.py  test_app_metadata.py  test_brand_asset_layout.py  test_brand_screenshot.py  test_dependency_contract.py  test_import_contract.py  test_repo_contract.py
(+46 files in other folders)
