[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fesium"
version = "0.1.0"
description = "Local dev tools for students and developers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "customtkinter>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
